--- a/src/app/all-errand-requests/all-errand-requests.page.html
+++ b/src/app/all-errand-requests/all-errand-requests.page.html
@@ -64,7 +64,7 @@
             <ion-label>
               <div text-wrap>
                 <p>Job Date: {{item.date | date:'d MMM yyyy'}}</p>
-                <p>Job Time: {{item.time}}</p>
+                <p>Job Time: {{item.time | date: 'shortTime'}}</p>
               </div>
             </ion-label>
           </ion-col>
