--- a/src/app/book-appointment/book-appointment.page.html
+++ b/src/app/book-appointment/book-appointment.page.html
@@ -78,7 +78,7 @@
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col size="6">
+        <ion-col>
           <ion-item>
             <ion-label>Reporting Date:</ion-label>
             <ion-datetime formControlName="date" [min]="date"></ion-datetime>
@@ -93,11 +93,13 @@
             </div>
           </ng-container>
         </ion-col>
+      </ion-row>
+      <ion-row>
         <ion-col size="6">
           <ion-item>
             <ion-label>Reporting Time:</ion-label>
             <ion-datetime displayFormat="hh:mm A" formControlName="time" [pickerOptions]="pickerOpt" [min]="min_time"
-              [max]="max_time"></ion-datetime>
+              [max]="max_time" (ngModelChange)="onReportTimeChange()"></ion-datetime>
             <ion-button>
               <ion-icon name="time"></ion-icon>
             </ion-button>
@@ -109,9 +111,29 @@
             </div>
           </ng-container>
         </ion-col>
+        <ion-col size="6">
+          <ion-item>
+            <ion-label>Estimated Ending Time:</ion-label>
+            <ion-datetime displayFormat="hh:mm A" formControlName="endtime" [pickerOptions]="pickerOpt" [min]="makerequestForm.value.time"
+              [max]="max_time" [(ngModel)]="ending_time"></ion-datetime>
+            <ion-button>
+              <ion-icon name="time"></ion-icon>
+            </ion-button>
+          </ion-item>
+          <ng-container *ngFor="let validation of validation_messages.endtime">
+            <div class="error-message"
+              *ngIf="makerequestForm.get('endtime').hasError(validation.type) && (makerequestForm.get('endtime').dirty || makerequestForm.get('endtime').touched)">
+              <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+            </div>
+            <div class="error-message"
+              *ngIf="!makerequestForm.value.time">
+              <ion-icon name="information-circle-outline"></ion-icon> You have to select a reporting time first
+            </div>
+          </ng-container>
+          
+        </ion-col>
       </ion-row>
     </ion-card>
-
     <ion-button expand="block" color="tertiary" type="submit">Submit</ion-button>
   </form>
 
