Applied Clashing Check

--- a/src/app/erjobs/erjobs.page.html
+++ b/src/app/erjobs/erjobs.page.html
@@ -59,6 +59,7 @@
                   <p>Client: {{ item?.client }}</p>
                   <p>Errand Price: {{ item?.price | currency }}</p>
                   <p>Errand Meeting Time: {{item?.date | date:'d MMM yyyy'}}, {{item?.time | date:'shortTime'}}</p>
+                  <p>Estimated Ending Time: {{item?.endtime | date:'shortTime'}}</p>
                   <p>Errand Description: {{ item?.description }}</p>
                 </div>
               </ion-label>
@@ -105,6 +106,7 @@
                   <p>Client: {{ item?.client }}</p>
                   <p>Errand Price: {{ item?.price | currency }}</p>
                   <p>Errand Meeting Time: {{item?.date | date:'d MMM yyyy'}}, {{item?.time | date:'shortTime'}}</p>
+                  <p>Estimated Ending Time: {{item?.endtime | date:'shortTime'}}</p>
                   <p>Errand Description: {{ item?.description }}</p>
                 </div>
               </ion-label>
@@ -148,6 +150,7 @@
                   <p>Client: {{ item?.client }}</p>
                   <p>Errand Price: {{ item?.price | currency }}</p>
                   <p>Errand Meeting Time: {{item?.date | date:'d MMM yyyy'}}, {{item?.time | date:'shortTime'}}</p>
+                  <p>Estimated Ending Time: {{item?.endtime | date:'shortTime'}}</p>
                   <p>Errand Description: {{ item?.description }}</p>
                 </div>
               </ion-label>
