--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
           <ion-item [routerLink]="pages.url" routerDirection="forward">
             <ion-icon [name]="pages.icon" slot="start"></ion-icon>
             {{pages.title}}
+            <ion-badge slot="end" color="danger">{{pages.badge}}</ion-badge>
           </ion-item>
         </ion-menu-toggle>
       </ion-list>
@@ -43,6 +44,7 @@
           <ion-item [routerLink]="pages.url" routerDirection="forward">
             <ion-icon [name]="pages.icon" slot="start"></ion-icon>
             {{pages.title}}
+            <ion-badge slot="end" color="danger">{{pages.badge}}</ion-badge>
           </ion-item>
         </ion-menu-toggle>
       </ion-list>
