--- a/src/app/clientjobs/clientjobs.page.html
+++ b/src/app/clientjobs/clientjobs.page.html
@@ -2,7 +2,13 @@
   <ion-toolbar color="primary">
     <ion-title>My Errands</ion-title>
     <ion-buttons slot="end">
-      <ion-menu-button menuId="first"></ion-menu-button>
+      <ion-button (click)="shownotifications($event)">
+        <ion-icon name="notifications"></ion-icon>
+      </ion-button>
+      <ion-menu-button menuId="first">
+        <ion-icon class="menu-button" name="menu"></ion-icon>
+        <ion-badge class="notifications-badge" color="danger">5</ion-badge>
+      </ion-menu-button>
       </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -66,7 +72,6 @@
                 </ion-col>
                 <ion-col class="align-end">
                   <ion-button (click)="toApplicants(jobs.id)">Applicants
-                    <ion-icon slot="start" name="notifications"></ion-icon>
                   </ion-button>
                 </ion-col>
               </ion-row>
