--- a/src/app/clientoverdue/clientoverdue.page.html
+++ b/src/app/clientoverdue/clientoverdue.page.html
@@ -29,9 +29,9 @@
                     <ion-card-subtitle>Errand Category: {{jobs.category}} </ion-card-subtitle>
                   </ion-row>
                 </ion-col>
-                <ion-col class="align-end">
-                  <ion-button (click)="toApplicants(jobs.id)">Applicants
-                    <ion-icon slot="start" name="notifications"></ion-icon>
+                <ion-col class="align-end" *ngFor="let m of jobs?.applicant">
+                  <ion-button (click)="toERProfile(m.id)">Errand Runner
+                    <ion-icon slot="start" name="person"></ion-icon>
                   </ion-button>
                 </ion-col>
               </ion-row>
@@ -49,6 +49,14 @@
                       <p>Estimated End Time: {{jobs.endtime | date:'shortTime'}}</p>
                     </div>
                   </ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col>
+                  <ion-button size="default" color="danger" expand="block" (click)="ExpiringJobs(jobs.id)">Expired</ion-button>
+                </ion-col>
+                <ion-col>
+                  <ion-button size="default" color="success" expand="block">Completed</ion-button>
                 </ion-col>
               </ion-row>
             </ion-card-content>
