--- a/src/app/clientoverdue/clientoverdue.page.html
+++ b/src/app/clientoverdue/clientoverdue.page.html
@@ -68,7 +68,7 @@
           </h5>
         </ion-item-divider>
         <ion-item-group>
-          <ion-item lines="none" *ngFor="let jobs of jobsAccepted">
+          <ion-item lines="none" *ngFor="let job of jobsAccepted">
             <ion-card style="background-color: #00F4F4;">
               <ion-card-header>
                 <ion-row>
@@ -79,13 +79,13 @@
                   </ion-col>
                   <ion-col>
                     <ion-row>
-                      <ion-card-title>{{jobs.errandname}}</ion-card-title>
+                      <ion-card-title>{{job.errandname}}</ion-card-title>
                     </ion-row>
                     <ion-row>
-                      <ion-card-subtitle>Errand Category: {{jobs.category}} </ion-card-subtitle>
+                      <ion-card-subtitle>Errand Category: {{job.category}} </ion-card-subtitle>
                     </ion-row>
                   </ion-col>
-                  <ion-col class="align-end" *ngFor="let m of jobs?.applicant">
+                  <ion-col class="align-end" *ngFor="let m of job?.applicant">
                     <ion-button (click)="toERProfile(m.id)">Errand Runner
                       <ion-icon slot="start" name="person"></ion-icon>
                     </ion-button>
@@ -99,17 +99,17 @@
                   <ion-col>
                     <ion-label>
                       <div text-wrap>
-                        <p>Errand Date: {{jobs.date | date:'d MMM yyyy'}}</p>
-                        <p>Errand Description: {{jobs.description}}</p>
-                        <p>Reporting Time: {{jobs.time | date:'shortTime'}}</p>
-                        <p>Estimated End Time: {{jobs.endtime | date:'shortTime'}}</p>
+                        <p>Errand Date: {{job.date | date:'d MMM yyyy'}}</p>
+                        <p>Errand Description: {{job.description}}</p>
+                        <p>Reporting Time: {{job.time | date:'shortTime'}}</p>
+                        <p>Estimated End Time: {{job.endtime | date:'shortTime'}}</p>
                       </div>
                     </ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row>
                   <ion-col>
-                    <ion-button size="default" color="danger" expand="block" (click)="ExpiringJobs(jobs.id)">Expired
+                    <ion-button size="default" color="danger" expand="block" (click)="ExpiringJobs(job)">Expired
                     </ion-button>
                   </ion-col>
                   <ion-col>
