--- a/src/app/all-errand-requests/all-errand-requests.page.html
+++ b/src/app/all-errand-requests/all-errand-requests.page.html
@@ -1,7 +1,12 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="end">
-      <ion-menu-button menuId="second"></ion-menu-button>
+      <ion-menu-button menuId="second">
+        <ion-icon class="menu-button" name="menu"></ion-icon>
+        <ion-badge class="notifications-badge">
+          <ion-icon name="alert"></ion-icon>
+        </ion-badge>
+      </ion-menu-button>
     </ion-buttons>
     <ion-title>Errand Requests</ion-title>
   </ion-toolbar>
