--- a/src/global.scss
+++ b/src/global.scss
@@ -92,11 +92,14 @@ ion-footer.segment-footer{
     }
 }
 .notifications-badge {
-    background-color: red;
     position: absolute;
     top: 6px;
+    color: white;
+    background-color: red;
     right: 6px;
     border-radius: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 .menu-button {            
