--- a/src/app/changedate/changedate.page.html
+++ b/src/app/changedate/changedate.page.html
@@ -5,12 +5,15 @@
 </ion-header>
 
 <ion-content>
-  <form [formGroup]="changedateForm">
+  <form [formGroup]="changedateForm" (ngSubmit)="editanddimiss(job)">
     <ion-card class="available-job-card">
       <ion-label>
         <ion-card class="errand-detail-card">
           <h2> Errand Details</h2>
           <p>Errand ID: {{job?.id}}</p>
+          <p>Errand Date: {{job?.date | date:'d MMM yyyy'}}</p>
+          <p>Reporting Time: {{{{job?.time | date:'shortTime'}}}}</p>
+          <p>End Time: {{job?.endtime | date:'shortTime' }}</p>
         </ion-card>
       </ion-label>
       <ion-row>
