Changes to ensure Form is working

--- a/src/app/changedate/changedate.page.html
+++ b/src/app/changedate/changedate.page.html
@@ -11,8 +11,9 @@
         <ion-card class="errand-detail-card">
           <h2> Errand Details</h2>
           <p>Errand ID: {{job?.id}}</p>
+          <p>Errand Name: {{job?.errandname}}</p>
           <p>Errand Date: {{job?.date | date:'d MMM yyyy'}}</p>
-          <p>Reporting Time: {{{{job?.time | date:'shortTime'}}}}</p>
+          <p>Reporting Time: {{job?.time | date:'shortTime'}}</p>
           <p>End Time: {{job?.endtime | date:'shortTime' }}</p>
         </ion-card>
       </ion-label>
