updated payment for both client and errand runner

--- a/src/app/receivepayment/receivepayment.page.html
+++ b/src/app/receivepayment/receivepayment.page.html
@@ -17,7 +17,7 @@
     <ion-row>
       <ion-col>
           <ion-label>
-            Name: Ben 
+            Name: Amy 
           </ion-label>
       </ion-col>
     </ion-row>
@@ -25,7 +25,7 @@
     <ion-row>
       <ion-col>
           <ion-label>
-            Email: ben@gmail.com 
+            Email: amy@gmail.com 
           </ion-label>
       </ion-col>
     </ion-row>
@@ -33,14 +33,14 @@
     <ion-row>
       <ion-col>
           <ion-label>
-            Phone Number: +65 91234567 
+            Phone Number: +65 91234567
           </ion-label>
       </ion-col>
     </ion-row>
 
     <ion-card class="available-job-card" style="border-radius: 10px; margin: 1.5pc;">
       <ion-card-header>
-        <ion-card-title class="title">Payment by:</ion-card-title>
+        <ion-card-title class="title">Receive Payment by:</ion-card-title>
       </ion-card-header>
       <ion-grid>
         <ion-row>
