--- a/src/global.scss
+++ b/src/global.scss
@@ -83,31 +83,9 @@ ion-footer.segment-footer{
     --ion-background-color: transparent;
 }
 
-.pop-over-style {
-    .popover-content {
-        //width: 80% !important; - this wont work or the bottom one.
-        --width: 200px !important;
-        border: 1px solid black;
-        top: 100;
-    }
-}
-.notifications-badge {
-    position: absolute;
-    top: 6px;
-    color: white;
-    background-color: red;
-    right: 6px;
-    border-radius: 100%;
-    padding: 0;
-    margin: 0;
-}
-
-.menu-button {            
-    position: relative;
-    width: 42px;
-    top:1px;
-    right: 1px;
-    overflow: visible!important;
+.modal-wrapper {
+    --max-height: 60vh;
+    --max-width: 90vw;
 }
 
 @import "~@ionic/angular/css/core.css";
