--- a/src/app/userprofile/userprofile.page.html
+++ b/src/app/userprofile/userprofile.page.html
@@ -64,5 +64,13 @@
         </ion-grid>
       </ion-item>
     </div>
+    <div style="display: flex; ">
+      <div style="width: 50%">
+        <ion-button style="margin: 1.2pc; font-size: 1.1pc;" size="large" expand="block" [routerLink]="['/review', targetEmail]">Reviews</ion-button>
+      </div>
+      <div style="width: 50%">
+        <ion-button style="margin: 1.2pc; font-size: 1.1pc;" size="large" expand="block" [routerLink]="['/post/', targetEmail]">Post</ion-button>
+      </div>
+    </div>
   </ion-card>
 </ion-content>
