--- a/src/app/users/users.page.html
+++ b/src/app/users/users.page.html
@@ -5,7 +5,7 @@
 </ion-header> 
 
 <ion-content class="homepage">
-  <ion-list class="transparent-stylebackground" lines="none">
+  <ion-list lines="none">
       <ion-item class="profile-item">
         <ion-grid>
           <ion-row>
@@ -70,5 +70,13 @@
     <div>
       <ion-button style="margin: 1.2pc; font-size: 1.1pc;" size="large" expand="block" [routerLink]="['/updateprofile']">Edit Profile</ion-button>
     </div>
+    <!-- <div style="display: flex; ">
+      <div style="width: 50%">
+        <ion-button [disabled]="reviewCount < 1"style="margin: 1.2pc; font-size: 1.1pc;" size="large" expand="block" [routerLink]="['/review', targetEmail]">Reviews</ion-button>
+      </div>
+      <div style="width: 50%">
+        <ion-button [disabled]="count < 1" style="margin: 1.2pc; font-size: 1.1pc;" size="large" expand="block" [routerLink]="['/post/', targetEmail]">Post</ion-button>
+      </div>
+    </div> -->
   </ion-list>
 </ion-content>
