added changes to notifications

--- a/src/app/book-appointment/book-appointment.page.html
+++ b/src/app/book-appointment/book-appointment.page.html
@@ -118,7 +118,7 @@
         </ion-col>
         <ion-col size="6">
           <ion-item>
-            <ion-label>Estimated Ending Time:</ion-label>
+            <ion-label> Ending Time:</ion-label>
             <ion-datetime displayFormat="hh:mm A" formControlName="endtime" [pickerOptions]="pickerOpt" [min]="makerequestForm.value.time"
               [max]="max_time" [(ngModel)]="ending_time"></ion-datetime>
             <ion-button>
