--- a/src/app/erapp-notification/erapp-notification.page.html
+++ b/src/app/erapp-notification/erapp-notification.page.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 <ion-content class="ER">
-  <ion-card class="available-job-card" *ngIf="jobsAccepted?.length !==0 && jobsRejected?.length !==0">
+  <ion-card class="available-job-card">
     <ion-list>
       <ion-item *ngFor="let item of jobsRejected">
         <ion-row>
