--- a/src/global.scss
+++ b/src/global.scss
@@ -87,12 +87,25 @@ ion-footer.segment-footer{
     --max-height: 60vh;
     --max-width: 90vw;
 }
+ 
+.notifications-badge {
+    position: absolute;
+    top: 6px;
+    color: white;
+    background-color: red;
+    right: 6px;
+    border-radius: 100%;
+    padding: 0;
+    margin: 0;
+}
 
-.select-modal {
-    background: rgba(0, 0, 0, 0.5) !important;
-    padding: 20% 10%  !important;
- }
-
+.menu-button {            
+    position: relative;
+    width: 42px;
+    top:1px;
+    right: 1px;
+    overflow: visible!important;
+}
 @import "~@ionic/angular/css/core.css";
 
 /* Basic CSS for apps built with Ionic */
