Changes to notifications (#55)
* Reconfigured home page + add nav to login/signup

* Added function for submit errand request

* Added upload photo feature to signup

* Changed UI and TS for Submit Errand Request

* Made upload image work as intended

* Added getavailablejobsbyclient + changed submit validation

* Added filter to client job request

* Added update photo page with functions

* Fixed problem with update photo

* Actually fixed updatephoto this time

* Made some UI changes to upload photo

* Add details page for clientjobs + add job ID

* Added UI for job applicants + Added some CSS

* Retrieve by email dynamically

* Show applicants for job

* Added Accept Applicants Feature

* Add reject, delete errand, display er profile, change user profile

* Added price + made changes to reject & services & homepage

* Finalised reject + cleaned up clientjobs code

* Made minor changes

* Added modal for rejection reason

* made modifications to time + added ending time

* Commit changes first

* Added notification for client & er

* added changes to notifications

--- a/src/app/changedate/changedate.page.html
+++ b/src/app/changedate/changedate.page.html
@@ -9,12 +9,9 @@
     <ion-card class="available-job-card">
       <ion-label>
         <ion-card class="errand-detail-card">
-          <h2> Errand Details</h2>
-          <p>Errand ID: {{job?.id}}</p>
           <p>Errand Name: {{job?.errandname}}</p>
           <p>Errand Date: {{job?.date | date:'d MMM yyyy'}}</p>
-          <p>Reporting Time: {{job?.time | date:'shortTime'}}</p>
-          <p>End Time: {{job?.endtime | date:'shortTime' }}</p>
+          <p>Time: {{job?.time | date:'shortTime'}} to {{job?.endtime | date:'shortTime' }}</p>
         </ion-card>
       </ion-label>
       <ion-row>
