--- a/src/app/users/users.page.html
+++ b/src/app/users/users.page.html
@@ -5,7 +5,7 @@
 </ion-header> 
 
 <ion-content class="homepage">
-  <ion-list lines="none">
+  <ion-list lines="none" style="background-color: transparent; --ion-background-color: transparent; text-align: center;">
       <ion-item class="profile-item">
         <ion-grid>
           <ion-row>
