--- a/src/app/clientoverdue/clientoverdue.page.html
+++ b/src/app/clientoverdue/clientoverdue.page.html
@@ -118,7 +118,7 @@
                     </ion-button>
                   </ion-col>
                   <ion-col>
-                    <ion-button size="default" color="success" expand="block">Completed</ion-button>
+                    <ion-button size="default" color="success" expand="block" (click)="toPayment()">Completed</ion-button>
                   </ion-col>
                 </ion-row>
               </ion-card-content>
