--- a/src/app/erjobs/erjobs.page.html
+++ b/src/app/erjobs/erjobs.page.html
@@ -13,17 +13,6 @@
 </ion-header>
 
 <ion-content class="ER">
-  <ion-segment style="--color-checked: #60b5ff;" [(ngModel)]="mySegment" (ionChange)="segmentChanged(mySegment)">
-    <ion-segment-button value="ERJobs">
-      <ion-label class="ion-text-wrap">Errands</ion-label>
-    </ion-segment-button>
-    <ion-segment-button value="ERApplied">
-      <ion-label class="ion-text-wrap">Errands<br/>Applied</ion-label>
-    </ion-segment-button>
-    <ion-segment-button value="ERRejected">
-      <ion-label class="ion-text-wrap">Errands<br/>Rejected</ion-label>
-    </ion-segment-button>
-  </ion-segment>
 
   <div [ngSwitch]="mySegment">
 
@@ -170,3 +159,17 @@
 
   </div>
 </ion-content>
+
+<ion-footer class="segment-footer">
+  <ion-segment style="--color-checked: #60b5ff;" [(ngModel)]="mySegment" (ionChange)="segmentChanged(mySegment)">
+    <ion-segment-button value="ERJobs">
+      <ion-label class="ion-text-wrap">Errands</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="ERApplied">
+      <ion-label class="ion-text-wrap">Errands<br/>Applied</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="ERRejected">
+      <ion-label class="ion-text-wrap">Errands<br/>Rejected</ion-label>
+    </ion-segment-button>
+  </ion-segment>
+</ion-footer>
