--- a/src/app/homepage/homepage.page.html
+++ b/src/app/homepage/homepage.page.html
@@ -1,7 +1,9 @@
 <ion-header>
   <ion-toolbar style="--ion-background-color: transparent;">
-    <ion-icon name="exit" size="large" slot="end" style="margin-right:1pc; color:#60b5ff;" (click)="logout()">
-    </ion-icon>
+    <ion-button size="large" shape="round" fill="clear" (click)="logout()" slot="end" style="margin-right: 1pc;">
+      <ion-icon size="large" name="exit"  style="color:#60b5ff;">
+      </ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
