--- a/src/app/all-errand-requests/all-errand-requests.page.html
+++ b/src/app/all-errand-requests/all-errand-requests.page.html
@@ -42,6 +42,9 @@
   </ion-grid>
 
   <ion-grid style="margin: 1pc;">
+    <div *ngIf="jobs?.length === 0" class="center">
+      <h5 class="center-content" style="color: red;"> There are no errands to apply </h5>
+    </div>
     <ion-card *ngFor="let item of jobs" [routerLink]="['/errand-details', item.id]">
       <ion-card-header>
         <ion-row>
