--- a/src/app/erjobs/erjobs.page.html
+++ b/src/app/erjobs/erjobs.page.html
@@ -163,7 +163,7 @@
 <ion-footer class="segment-footer">
   <ion-segment style="--color-checked: #60b5ff;" [(ngModel)]="mySegment" (ionChange)="segmentChanged(mySegment)">
     <ion-segment-button value="ERJobs">
-      <ion-label class="ion-text-wrap">Errands</ion-label>
+      <ion-label class="ion-text-wrap">My Errands</ion-label>
     </ion-segment-button>
     <ion-segment-button value="ERApplied">
       <ion-label class="ion-text-wrap">Errands<br/>Applied</ion-label>
