--- a/src/app/clientjobsnotification/clientjobsnotification.page.html
+++ b/src/app/clientjobsnotification/clientjobsnotification.page.html
@@ -54,6 +54,8 @@
           <ion-col>
             <ion-button size="default" expand="block" color="tertiary" (click)="DeleteErrand(job)">Delete Errand</ion-button>
           </ion-col>
+        </ion-row>
+        <ion-row *ngIf="appear == true">
           <ion-col>
             <ion-button size="default" expand="block" color="tertiary" (click)="changedate()">Change Errand Date</ion-button>
           </ion-col>
