--- a/src/app/changedate/changedate.page.html
+++ b/src/app/changedate/changedate.page.html
@@ -35,7 +35,7 @@
         <ion-col size="6">
           <ion-item>
             <ion-label>Reporting Time:</ion-label>
-            <ion-datetime displayFormat="hh:mm A" formControlName="time" [pickerOptions]="pickerOpt"></ion-datetime>
+            <ion-datetime displayFormat="hh:mm A" formControlName="time" [pickerOptions]="pickerOpt" [(ngModel)]="start_time"></ion-datetime>
             <ion-button>
               <ion-icon name="time"></ion-icon>
             </ion-button>
@@ -50,7 +50,7 @@
         <ion-col size="6">
           <ion-item>
             <ion-label>Ending Time:</ion-label>
-            <ion-datetime displayFormat="hh:mm A" formControlName="endtime" [pickerOptions]="pickerOpt"></ion-datetime>
+            <ion-datetime displayFormat="hh:mm A" formControlName="endtime" [pickerOptions]="pickerOpt" [(ngModel)]="end_time"></ion-datetime>
             <ion-button>
               <ion-icon name="time"></ion-icon>
             </ion-button>
