Add notification count + change notifications

--- a/src/app/all-errand-requests/all-errand-requests.page.html
+++ b/src/app/all-errand-requests/all-errand-requests.page.html
@@ -4,7 +4,7 @@
       <ion-menu-button menuId="second">
         <ion-icon class="menu-button" name="menu"></ion-icon>
         <ion-badge class="notifications-badge">
-          <ion-icon name="alert"></ion-icon>
+          {{jobsRejectedCount?.length + jobsAcceptedCount?.length}}
         </ion-badge>
       </ion-menu-button>
     </ion-buttons>
