--- a/src/app/eroverdue/eroverdue.page.html
+++ b/src/app/eroverdue/eroverdue.page.html
@@ -5,7 +5,7 @@
       <ion-menu-button menuId="second">
         <ion-icon class="menu-button" name="menu"></ion-icon>
         <ion-badge class="notifications-badge">
-          <ion-icon name="alert"></ion-icon>
+          {{jobsRejectedCount?.length + jobsAcceptedCount?.length}}
         </ion-badge> 
       </ion-menu-button>
       </ion-buttons>
