--- a/src/app/post/post.page.html
+++ b/src/app/post/post.page.html
@@ -10,5 +10,17 @@
 <ion-content class="homepage">
   <h1 style="background-color: transparent; --ion-background-color: transparent; text-align: center;">Leave a review for {{ targetEmail }}</h1>
       <ion-textarea style=" margin: auto; width:97%; color: black; border: 1px solid black; background-color: white; border-radius: 10px;" [(ngModel)]="data.comment"></ion-textarea>
+      <h2 style="background-color: transparent; --ion-background-color: transparent; text-align: center;">
+      <ion-label>Star Ratings</ion-label>
+      </h2>
+
+      <ion-select style="padding-top: 10px; margin: auto; width:90%; color: black; border: 1px solid black; background-color: white; border-radius: 10px;" [(ngModel)]="data.starReview">
+        <ion-select-option default>0</ion-select-option>
+        <ion-select-option>1</ion-select-option>
+        <ion-select-option>2</ion-select-option>
+        <ion-select-option>3</ion-select-option>
+        <ion-select-option>4</ion-select-option>
+        <ion-select-option>5</ion-select-option>
+      </ion-select>
   <ion-button style="margin: 1.2pc; font-size: 1.1pc;" size="large" expand="block" (click)="postReview()">Post</ion-button>
 </ion-content>
